--- a/index.html
+++ b/index.html
@@ -33,11 +33,8 @@
 
   <main>
 
-    <!--
-      - #SIDEBAR
-    -->
+   
 
-    <aside class="sidebar" data-sidebar>
 
       <div class="sidebar-info">
 
@@ -148,6 +145,7 @@
         </ul>
 
       </div>
+    </main>
       
       </body>
 
